components/networkpolicies/namespace-templates/kube-system/gke/allow-egress-from-konnectivity-agent-to-all.yaml
---
# https://cloud.google.com/kubernetes-engine/docs/troubleshooting#konnectivity_proxy
# https://kubernetes.io/docs/tasks/extend-kubernetes/setup-konnectivity/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-konnectivity-agent-to-all
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: konnectivity-agent
  egress:
    - ports:
        - protocol: TCP
          port: 8132
    - ports:
        - protocol: TCP
          port: 10250
    - ports:
        - protocol: TCP
          port: 9443
    - ports:
        - protocol: TCP
          port: 8443
    - ports:
        - protocol: TCP
          port: 15017
  policyTypes:
    - Egress
