components/networkpolicies/namespace-templates/kube-system/gke/allow-egress-from-kube-system-to-gcp-specific.yaml
# The policy was created with the help of
# https://github.com/GoogleCloudPlatform/anthos-security-blueprints
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-from-kube-system-to-gcp-specific
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 199.36.153.8/30  # https://cloud.google.com/vpc/docs/configure-private-google-access-hybrid#config-routing-on-prem
      - ipBlock:
          cidr: 169.254.169.254/32  # https://cloud.google.com/compute/docs/internal-dns#dns_name_resolution
      - ipBlock:
          cidr: 169.254.169.252/32  # https://cloud.google.com/kubernetes-engine/docs/how-to/network-policy#network-policy-and-workload-identity
