components/networkpolicies/namespace-templates/kube-system/gke/allow-ingress-from-all-to-metrics-server.yaml
---
# https://github.com/kubernetes-sigs/metrics-server#requirements
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-all-to-metrics-server
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: metrics-server
  ingress:
    - ports:
        - port: 10250
  policyTypes:
    - Ingress
